# flex-test

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml
.nginx/: http.conf
apps/subscriptions/: models.py  tasks.py
apps/subscriptions/migrations/: 0001_initial.py
apps/users/migrations/: 0001_initial.py
dists/: .env.db.dist  .env.dist
flex_test/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
interfaces/api/: urls.py
interfaces/api/filters/: appointments.py  clients.py  employees.py  finances.py  loyalty.py  services.py
interfaces/api/serializers/: subscriptions.py  users.py
interfaces/api/views/: subscriptions.py  users.py
interfaces/github_api/: __init__.py  main.py
